# stinger-v2

./: .gitignore  Dockerfile  README.md  benchmark_spine_parallel.py  benchmark_spine_throughput.py  bumble_server.py  docker-compose.yml  pyproject.toml
data/benchmark_outputs/: benchmark_results_20260103_232921.json  benchmark_results_20260103_233053.json  benchmark_results_20260103_234332.json  parallel_benchmark_20260103_235419.json  parallel_benchmark_20260103_235532.json  parallel_benchmark_20260104_001331.json  parallel_benchmark_20260104_001900.json  parallel_benchmark_20260104_002251.json
docs/: BUMBLE70B_FLEET_CONFIG.md
e2e_results/: RELIABILITY_REPORT.md  e2e_results_20260103_175503.json  e2e_results_20260103_175517.json  e2e_results_20260103_183250.json  e2e_results_20260103_190403.json  e2e_results_20260103_191506.json
e2e_samples/cgm/: cgm_001_normal.csv  cgm_002_normal.csv  cgm_003_normal.csv  cgm_004_normal.csv  cgm_005_normal.csv  cgm_006_prediabetic.csv  cgm_007_prediabetic.csv  cgm_008_prediabetic.csv  cgm_009_prediabetic.csv  cgm_010_prediabetic.csv  cgm_011_diabetic_controlled.csv  cgm_012_diabetic_controlled.csv  cgm_013_diabetic_controlled.csv  cgm_014_diabetic_controlled.csv  cgm_015_diabetic_controlled.csv  cgm_016_diabetic_uncontrolled.csv  cgm_017_diabetic_uncontrolled.csv  cgm_018_diabetic_uncontrolled.csv  cgm_019_hypoglycemic.csv  cgm_020_hypoglycemic.csv
e2e_samples/ecg/: ecg_001.hea  ecg_002.hea  ecg_003.hea  ecg_004.hea  ecg_005.hea  ecg_006.hea  ecg_007.hea  ecg_008.hea  ecg_009.hea  ecg_010.hea  ecg_011.hea  ecg_012.hea  ecg_013.hea  ecg_014.hea  ecg_015.hea  ecg_016.hea  ecg_017.hea  ecg_018.hea  ecg_019.hea  ecg_020.hea  ecg_021.hea  ecg_022.hea  ecg_023.hea  ecg_024.hea  ecg_025.hea  ecg_026.hea  ecg_027.hea  ecg_028.hea  ecg_029.hea  ecg_030.hea  ecg_031.hea  ecg_032.hea  ecg_033.hea  ecg_034.hea  ecg_035.hea  ecg_036.hea  ecg_037.hea  ecg_038.hea  ecg_039.hea  ecg_040.hea
e2e_samples/spine/: spine_001.dicom  spine_002.dicom  spine_003.dicom  spine_004.dicom  spine_005.dicom  spine_006.dicom  spine_007.dicom  spine_008.dicom  spine_009.dicom  spine_010.dicom  spine_011.dicom  spine_012.dicom  spine_013.dicom  spine_014.dicom  spine_015.dicom  spine_016.dicom  spine_017.dicom  spine_018.dicom  spine_019.dicom  spine_020.dicom  spine_021.dicom  spine_022.dicom  spine_023.dicom  spine_024.dicom  (+16 more)
scripts/: run_e2e_batch.py
stinger/: __init__.py  config.py  main.py
tests/: __init__.py  test_e2e.py
(+11 files in other folders)
